# mdbook-nixdoc

./: Cargo.toml  README.md  default.nix  flake.nix  shell.nix
dev/: treefmt.nix
src/: lib.rs  main.rs
